# KMC

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
KMC_func/: CMakeCache.txt  CMakeLists.txt  Makefile  auxil.hpp  cheb.hpp  chebcoll.hpp  cmake_install.cmake  easy_data.py  loaddata-normal.py  loaddata.py  lookup_table.hpp  macros.hpp  other_data.py
KMC_func/rej_sample/: Makefile  analysis.py  data_plot.py  mh_1d  mh_1d.cpp  mh_sample_data_1d.txt  rej_data.py  rej_sample_data.txt  rejection_sampling  rejection_sampling.cpp  rejection_sampling_1d  rejection_sampling_1d.cpp  rejection_sampling_2d  rejection_sampling_2d.cpp  rejsample.hpp  run_file.sh  test_main  test_main.cpp
KMC_func/rej_sample/data/: D=0.024000-alpha=12.165450-fl=0.050000data.txt  D=0.024000-alpha=12.165450-fl=0.050000samp.txt
KMC_func/rej_sample_try/: Makefile  rej_data.py  rej_sample_data_1d.txt  rejection_sampling_1d  rejection_sampling_1d.cpp  rejection_sampling_2d
docs/: Doxyfile.docs  Makefile
example_objs/: example_kmc_step_funcs.cpp
tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cheb_lookup_test.hpp  cmake_install.cmake  demo_cheb_lookup_test.hpp  lookup_test.hpp  test_cheb_test.hpp  test_main.cpp
tests/KMC_func/: Makefile  cmake_install.cmake
tests/docs/: Doxyfile.docs  Makefile  cmake_install.cmake
